--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
+    <meta name="theme-color" content="#0000000" />
+    
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -18,7 +19,7 @@
   
     <title>Trackee</title>
   </head>
-  <body>
+  <body class="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
